# CarnetConsole

./: CREDIT.md  README.md  meson.build
src/: carnet.py  carnettty.in  meson.build  windonw.py  window.py  window.ui~
src/server/: settings_manager.py
src/server/databases/: recent_db_manager.py
src/server/notes/: note_manager.py
src/terminal-client/: main.py
src/terminal-client/listers/: latest_lister.py  path_lister.py
